# python-project-lvl2

./: .coverage  .gitignore  README.md  makefile  pyproject.toml  setup.cfg
.github/workflows/: CI.yml
gendiff/: __init__.py  constants.py  engine.py  stylish.py
gendiff/diff_module/: diff_engine.py  generate_diff.py  json_diff.py
gendiff/formatters/: plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_diff.py  test_json_diff.py
tests/fixtures/: compare_nested_files.txt  flat_ast.py  flat_plain_format.txt  nested_ast.py  nested_plain_format.txt
